Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -14,8 +14,7 @@
       "cell_type": "markdown",
       "source": [
         "2023/4/21 <br>\n",
-        "StableDiffusion webuiを無料で利用する場合、アカウントがBANされることはありませんが、Colabが一時的に利用できなくなる可能性があることが示唆されています。無料で実行する場合は、自己責任でお願いします。<br>\n",
-        "Pro版の方は、今まで通り利用していただいて構いません。<br>\n",
+        "有料プランの方のみご利用いただけます。<br>\n",
         "[詳細](https://research.google.com/colaboratory/faq.html#limitations-and-restrictions)"
       ],
       "metadata": {
@@ -458,7 +457,7 @@
       "source": [
         "#@title カスタムモデル\n",
         "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
-        "model_type_2 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
+        "model_type_2 =\"Checkpoint\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
         "if model_type_2 == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type_2 == \"Hypernetwork\":\n",
@@ -466,7 +465,7 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-multiple-hypernetworks\"\n",
         "elif model_type_2 ==\"Aesthetic_Gradients\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
-        "elif model_type2 == \"LoRA\":\n",
+        "elif model_type_2 == \"LoRA\":\n",
         "    !mkdir /content/stable-diffusion-webui/models/Lora\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Lora\"\n",
         "elif model_type_2 == \"LoRA(additional-networks)\":\n",
@@ -474,13 +473,13 @@
         "elif model_type_2 == \"LyCORIS\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "\n",
-        "modelUrl = \"\"  # @param {'type': 'string'}\n",
+        "modelUrl = \"https://civitai.com/api/download/models/39181\"  # @param {'type': 'string'}\n",
         "if model_type_2 == \"Wildcards\":\n",
         "    !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
         "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
-        "elif model_type == \"Easy_Prompt_Selector\":\n",
+        "elif model_type_2 == \"Easy_Prompt_Selector\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags\"\n",
         "    if modelUrl == \"\":\n",
         "        from google.colab import files\n",
@@ -494,7 +493,25 @@
         "              print(\"Uploaded file:\", filename)\n",
         "\n",
         "        upload_files()\n",
-        "        \n",
+        "\n",
+        "    else:\n",
+        "        def install(url):\n",
+        "            base_name = os.path.basename(url)\n",
+        "\n",
+        "            if url.startswith(\"https://drive.google.com\"):\n",
+        "                os.chdir(\"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags\")\n",
+        "                !gdown --fuzzy {url}\n",
+        "            elif url.startswith(\"https://huggingface.co/\"):\n",
+        "                if \"/blob/\" in url:\n",
+        "                    url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "                huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
+        "                user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "                !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d {pretrained_model} -o {base_name} \n",
+        "            else:\n",
+        "                !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "                \n",
+        "        install(modelUrl)\n",
+        "\n",
         "elif modelUrl == \"\":\n",
         "  print(\"\")\n",
         "  \n",
