Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -32,30 +32,19 @@
       "source": [
         "#@title 1.WebUIのインストール\n",
         "import os\n",
+        "from google.colab import drive\n",
         "\n",
         "Mount_Drive = False # @param {type: \"boolean\"}\n",
         "\n",
         "if Mount_Drive:\n",
-        "    import os\n",
-        "    from google.colab import drive\n",
         "    if not os.path.exists(\"/content/drive\"):\n",
         "        drive.mount(\"/content/drive\")\n",
         "        \n",
         "%cd /content\n",
         "\n",
-        "%env TF_CPP_MIN_LOG_LEVEL=1\n",
-        "\n",
         "!apt -y update -qq\n",
-        "!wget http://launchpadlibrarian.net/367274644/libgoogle-perftools-dev_2.5-2.2ubuntu3_amd64.deb\n",
-        "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/google-perftools_2.5-2.2ubuntu3_all.deb\n",
-        "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libtcmalloc-minimal4_2.5-2.2ubuntu3_amd64.deb\n",
-        "!wget https://launchpad.net/ubuntu/+source/google-perftools/2.5-2.2ubuntu3/+build/14795286/+files/libgoogle-perftools4_2.5-2.2ubuntu3_amd64.deb\n",
-        "!apt install -qq libunwind8-dev\n",
-        "!dpkg -i *.deb\n",
-        "%env LD_PRELOAD=libtcmalloc.so\n",
-        "!rm *.deb\n",
-        "\n",
         "!apt -y install -qq aria2\n",
+        "\n",
         "!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "!pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "\n",
@@ -77,7 +66,7 @@
         "#Extensions2　任意\n",
         "Extensions = True #@param {'type':'boolean'}\n",
         "if Extensions == True :\n",
-        "  !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui\n",
+        "#  !git clone https://github.com/deforum-art/deforum-for-automatic1111-webui /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui\n",
         "  !git clone https://github.com/toshiaki1729/stable-diffusion-webui-dataset-tag-editor.git /content/stable-diffusion-webui/extensions/dataset-tag-editor\n",
         "  !git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui /content/stable-diffusion-webui/extensions/sdweb-merge-block-weighted-gui\n",
         "  !git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
