--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -700,6 +700,10 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "cs9eiDFhB1yN"
+      ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "gpuClass": "standard",
