--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -47,6 +47,12 @@
         "!nvidia-smi\n",
         "\n",
         "#パッケージインストール\n",
+        "import os\n",
+        "from google.colab import drive\n",
+        "\n",
+        "!apt -y update -qq\n",
+        "!apt -y install -qq aria2\n",
+        "\n",
         "!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "!pip install -q xformers==0.0.19 triton==2.0.0 -U\n",
         "\n",
