Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -66,7 +66,7 @@
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "%cd /content/stable-diffusion-webui\n",
         "\n",
-        "#Extensions3(ControlNet)　任意\n",
+        "#Extensions2(ControlNet)　任意\n",
         "ControlNet = False #@param {'type':'boolean'}\n",
         "if ControlNet == True :\n",
         "    !git clone https://github.com/camenduru/openpose-editor /content/stable-diffusion-webui/extensions/openpose-editor\n",
@@ -233,7 +233,7 @@
         "            !wget {model_url} -O /content/stable-diffusion-webui/models/Stable-diffusion/{model_name}.safetensors\n",
         "    if vae_url :\n",
         "        base_name = os.path.basename(vae_url)\n",
-        "        !wget {vae_url} -O /content/stable-diffusion-webui/models/Stable-diffusion/{vae_name}.vae.pt\n",
+        "        !wget {vae_url} -O /content/stable-diffusion-webui/models/VAE/{base_name}\n",
         "\n",
         "install(model_url, vae_url)\n",
         "\n",
