Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -49,6 +49,7 @@
         "!pip install -q xformers==0.0.18 triton==2.0.0 -U\n",
         "\n",
         "#WebUIのインストール\n",
+        "#!git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "!git clone -b v2.2 https://github.com/camenduru/stable-diffusion-webui\n",
         "\n",
         "#Extensions1 絶対入れておくべき\n",
@@ -59,7 +60,9 @@
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
         "\n",
         "#Extensions1.5 \n",
-        "\n",
+        "!git clone https://huggingface.co/embed/negative /content/stable-diffusion-webui/embeddings/negative\n",
+        "!git clone https://huggingface.co/embed/lora /content/stable-diffusion-webui/models/Lora/positive\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/embed/upscale/resolve/main/4x-UltraSharp.pth -d /content/stable-diffusion-webui/models/ESRGAN -o 4x-UltraSharp.pth\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py -O /content/stable-diffusion-webui/scripts/run_n_times.py\n",
         "\n",
@@ -336,12 +339,8 @@
         "\n",
         "def install(vae_url):\n",
         "    base_name = os.path.basename(vae_url)\n",
-        "    if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
-        "        base_name = base_name.replace(\".ckpt\", \".vae.pt\").replace(\".safetensors\", \".vae.pt\") \n",
-        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name}           \n",
-        "\n",
-        "    print(base_name)\n",
-        "     \n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} \n",
+        "    print(base_name)    \n",
         "install(vae_url)\n"
       ],
       "metadata": {
