Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -62,7 +62,9 @@
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
         "\n",
         "#Extensions1.5 \n",
-        "\n",
+        "!git clone https://huggingface.co/embed/negative /content/stable-diffusion-webui/embeddings/negative\n",
+        "!git clone https://huggingface.co/embed/lora /content/stable-diffusion-webui/models/Lora/positive\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/embed/upscale/resolve/main/4x-UltraSharp.pth -d /content/stable-diffusion-webui/models/ESRGAN -o 4x-UltraSharp.pth\n",
         "!git clone https://github.com/camenduru/sd-webui-tunnels /content/stable-diffusion-webui/extensions/sd-webui-tunnels\n",
         "!wget https://raw.githubusercontent.com/camenduru/stable-diffusion-webui-scripts/main/run_n_times.py -O /content/stable-diffusion-webui/scripts/run_n_times.py\n",
         "\n",
@@ -74,7 +76,6 @@
         "    !git clone https://github.com/bbc-mc/sdweb-merge-block-weighted-gui /content/stable-diffusion-webui/extensions/sdweb-merge-block-weighted-gui\n",
         "    !git clone -b v2.0 https://github.com/camenduru/sd-civitai-browser /content/stable-diffusion-webui/extensions/sd-civitai-browser\n",
         "    !git clone https://github.com/opparco/stable-diffusion-webui-two-shot.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-two-shot\n",
-        "    !git apply --ignore-whitespace /extensions/stable-diffusion-webui-two-shot/cfg_denoised_callback-ea9bd9fc.patch\n",
         "    !git clone https://github.com/hallatore/stable-diffusion-webui-chatgpt-utilities /content/stable-diffusion-webui/extensions/stable-diffusion-webui-chatgpt-utilities\n",
         "    !git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-locon\n",
         "    !git clone https://github.com/hnmr293/sd-webui-llul /content/stable-diffusion-webui/extensions/sd-webui-llul\n",
@@ -153,7 +154,7 @@
         "\n",
         "import os\n",
         "\n",
-        "model_name =\"anything-v3.0\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's_7th_Heaven_Mix\", \"Corneo's_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\",\"AniReality-Mix\"] {allow-input: false}\n",
+        "model_name =\"7th_anime_v3_A\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"anything-v4.5\",\"Counterfeit-V2.0\",\"Counterfeit-V2.5\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\", \"7th_anime_v2_A\", \"7th_anime_v2_B\", \"7th_anime_v2_C\", \"7th_anime_v2_G\",\"7th_anime_v3_A\", \"7th_anime_v3_B\", \"7th_anime_v3_C\",\"7th_anime_3.1_B\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"meadmix\",\"Nabylon-v1.0\",\"LonganMix\",\"Corneo's_7th_Heaven_Mix\", \"Corneo's_Shinra26_Mix\",\"atwmix_test2\",\"Graham_Special\", \"BalorV2featAbyssOrange2\",\"Balor-V2.5featAOM3A3\",\"ChilloutMix\", \"wd-1-5-beta2\",\"AniReality-Mix\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
         "    \"stable_diffusion_v1.5\":\"https://huggingface.co/camenduru/sd15/resolve/main/v1-5-pruned-emaonly.ckpt\",\n",
@@ -248,12 +249,8 @@
         "\n",
         "def install(vae_url):\n",
         "    base_name = os.path.basename(vae_url)\n",
-        "    if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
-        "        base_name = base_name.replace(\".ckpt\", \".vae.pt\").replace(\".safetensors\", \".vae.pt\") \n",
-        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name}           \n",
-        "\n",
-        "    print(base_name)\n",
-        "     \n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} \n",
+        "    print(base_name)    \n",
         "install(vae_url)\n"
       ],
       "metadata": {
@@ -270,7 +267,7 @@
         "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
         "import os\n",
         "\n",
-        "model_type =\"Easy_Prompt_Selector\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
+        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
         "\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
