--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -64,6 +64,7 @@
         "!git clone https://github.com/yfszzx/stable-diffusion-webui-images-browser /content/stable-diffusion-webui/extensions/stable-diffusion-webui-images-browser\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
+        "!git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git /content/stable-diffusion-webui/extensions/sd-webui-photopea-embed\n",
         "%cd /content/stable-diffusion-webui\n",
         "\n",
         "#Extensions2(ControlNet)　任意\n",
@@ -125,9 +126,9 @@
         "    !git clone https://github.com/Katsuyuki-Karasawa/stable-diffusion-webui-localization-ja_JP /content/stable-diffusion-webui/extensions/stable-diffusion-webui-localization-ja_JP\n",
         "    %cd /content/stable-diffusion-webui/\n",
         "    import json\n",
-        "    #日本語化 　\n",
-        "    data = {\"localization\": \"ja_JP\"} \n",
-        "    #関西弁化　\n",
+        "    #日本語化\n",
+        "    data = {\"localization\": \"ja_JP\"}\n",
+        "    #関西弁化\n",
         "   #data = {\"localization\": \"ks_JP\"}\n",
         "    with open(\"config.json\", \"w\") as f:\n",
         "        json.dump(data, f)"
@@ -142,11 +143,11 @@
       },
       "outputs": [],
       "source": [
-        "#@title  2.モデル選択とWebUIの起動 \n",
+        "#@title  2.モデル選択とWebUIの起動\n",
         "#@markdown モデル選択とVAEを選択してから実行してください。\n",
         "\n",
         "import os\n",
-        "                                \n",
+        "\n",
         "model_name =\"AniReality-Mix\" #@param [\"stable_diffusion_v1.5\",\"stable_diffusion_v2.1\",\"waifu_diffusion_v1.3\",\"Openjourney\",\"anything-v3.0\",\"anything-v4.0\",\"Counterfeit-V2.0\",\"8528-diffusion\",\"AbyssOrangeMix2\",\"EerieOrangeMix2\",\"trinart2_step115000\",\"Eimis_Anime_Diffusion_1.0v\",\"dreamlike-photoreal-2.0\",\"Cyberpunk-Anime-Diffusion\",\"Plat_Diffusion_v1.3.1\",\"ACertainThing\",\"pastel_mix\",\"anything-v4.5\",\"Basil_mix_fixed\",\"Realistic_Vision_V1.3\",\"Counterfeit-V2.5\",\"SukiyakiMix-v1.0\",\"7th_anime_v1.1\",\"7th_anime_v2_C\",\"7th_anime_v3_A\",\"YuzuGinger_v4\",\"YuzuLemonMilk_v1.5\", \"Defmix-v1.1\",\"RDtMix\",\"Corneo_7th_Heaven_Mix\",\"ChilloutMix\",\"wd-1-5-beta2\",\"AniReality-Mix\"] {allow-input: false}\n",
         "\n",
         "model_dict={\n",
@@ -239,7 +240,7 @@
         "\n",
         "%cd /content/stable-diffusion-webui\n",
         "!sed -i -e '''/prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
-        "!python launch.py --share --xformers --enable-insecure-extension-access --gradio-queue --no-half-vae "
+        "!python launch.py --share --xformers --enable-insecure-extension-access --gradio-queue --no-half-vae"
       ]
     },
     {
