Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -43,8 +43,8 @@
         "\n",
         "%cd /content\n",
         "\n",
-        "!apt -y update -qq       \n",
-        "!apt -y install -qq aria2 \n",
+        "!apt -y update -qq\n",
+        "!apt -y install -qq aria2\n",
         "\n",
         "!pip install -q torch==2.0.0+cu118 torchvision==0.15.1+cu118 torchaudio==2.0.1+cu118 torchtext==0.15.1 torchdata==0.6.0 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "!pip install -q xformers==0.0.19 triton==2.0.0 -U\n",
@@ -60,8 +60,9 @@
         "!git clone https://github.com/DominikDoom/a1111-sd-webui-tagcomplete.git /content/stable-diffusion-webui/extensions/a1111-sd-webui-tagcomplete\n",
         "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/stable-diffusion-webui/extensions/stable-diffusion-webui-huggingface\n",
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/stable-diffusion-webui/extensions/sd-webui-additional-networks\n",
+        "!git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git /content/stable-diffusion-webui/extensions/sd-webui-photopea-embed\n",
         "\n",
-        "#Extensions1.5 \n",
+        "#Extensions1.5\n",
         "!git clone https://huggingface.co/embed/negative /content/stable-diffusion-webui/embeddings/negative\n",
         "!git clone https://huggingface.co/embed/lora /content/stable-diffusion-webui/models/Lora/positive\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/embed/upscale/resolve/main/4x-UltraSharp.pth -d /content/stable-diffusion-webui/models/ESRGAN -o 4x-UltraSharp.pth\n",
@@ -219,10 +220,10 @@
         "            model_url = model_url.replace(\"/blob/\", \"/resolve/\")\n",
         "        huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
         "        user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {model_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name} \n",
+        "        !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {model_url} -d /content/stable-diffusion-webui/models/Stable-diffusion -o {base_name}\n",
         "    else:\n",
         "        !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/models/Stable-diffusion {model_url}\n",
-        "        \n",
+        "\n",
         "install(model_url)"
       ]
     },
@@ -249,8 +250,8 @@
         "\n",
         "def install(vae_url):\n",
         "    base_name = os.path.basename(vae_url)\n",
-        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/VAE -o {base_name} \n",
-        "    print(base_name)    \n",
+        "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 {vae_url} -d /content/stable-diffusion-webui/models/VAE -o {base_name}\n",
+        "    print(base_name)\n",
         "install(vae_url)\n"
       ],
       "metadata": {
@@ -264,7 +265,7 @@
       "cell_type": "code",
       "source": [
         "#@title カスタムモデルまたはExtensionsの追加(任意)\n",
-        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
+        "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20)\n",
         "import os\n",
         "\n",
         "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
@@ -295,7 +296,7 @@
         "    def install(url):\n",
         "        import os\n",
         "        base_name = os.path.basename(url)\n",
-        "        print(\"base_name\")    \n",
+        "        print(\"base_name\")\n",
         "        pretrained_model = \"/content/stable-diffusion-webui/extensions\"\n",
         "        !git clone {url} {pretrained_model}/{base_name}\n",
         "    install(modelUrl)\n",
@@ -327,15 +328,15 @@
         "                    url = url.replace(\"/blob/\", \"/resolve/\")\n",
         "                huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
         "                user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
-        "                !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d {pretrained_model} -o {base_name} \n",
+        "                !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d {pretrained_model} -o {base_name}\n",
         "            else:\n",
         "                !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
-        "                \n",
+        "\n",
         "        install(modelUrl)\n",
         "\n",
         "elif modelUrl == \"\":\n",
         "  print(\"modelUrlに値が指定されていないため、スキップされます。\")\n",
-        "  \n",
+        "\n",
         "else:\n",
         "    def install(url):\n",
         "        base_name = os.path.basename(url)\n",
@@ -348,7 +349,7 @@
         "            huggingface_token = \"\"  # @param {type:\"string\"}\n",
         "            user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
         "            if \"/blob/\" in url:\n",
-        "                url = url.replace(\"/blob/\", \"/resolve/\")          \n",
+        "                url = url.replace(\"/blob/\", \"/resolve/\")\n",
         "            if model_type == \"VAE\":\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
@@ -357,9 +358,9 @@
         "            elif model_type ==\"Texual_Inversion\":\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
-        "                    print(base_name)                \n",
+        "                    print(base_name)\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
-        "                \n",
+        "\n",
         "            !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -k 1M -s 16 -d {pretrained_model} -o {base_name} {url}\n",
         "\n",
         "        else:\n",
@@ -371,7 +372,7 @@
         "            elif model_type ==\"Texual_Inversion\":\n",
         "                if \".ckpt\" in base_name or \".safetensors\" in base_name:\n",
         "                    base_name = base_name.replace(\".ckpt\", \".pt\").replace(\".safetensors\", \".pt\")\n",
-        "                    print(base_name)                \n",
+        "                    print(base_name)\n",
         "                pretrained_model = \"/content/stable-diffusion-webui/embeddings\"\n",
         "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
@@ -428,7 +429,7 @@
         "\t\"One_Piece_Wano_Style_LoRA\":\"https://civitai.com/api/download/models/6331\" ,\n",
         "\t\"Eula_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Eula/eulaMedium.safetensors\" ,\n",
         "\t\"Yelan_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Yelan/Yelan_Hard.safetensors\" ,\n",
-        "\t\"Barbara_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Barbara/Barbara_mediumpruned.safetensors\", \n",
+        "\t\"Barbara_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Barbara/Barbara_mediumpruned.safetensors\",\n",
         "\t\"Diluc_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Diluc/Diluc_Mediumpruned.safetensors\" ,\n",
         "\t\"Mona_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Mona/Mona_mediumpruned.safetensors\" ,\n",
         "\t\"Ganyu_LoRA\":\"https://huggingface.co/YoungMasterFromSect/Trauter_LoRAs/resolve/main/LoRA/Genshin-Impact/Ganyu/Ganyu_Medium.safetensors\" ,\n",
@@ -448,17 +449,17 @@
         "\t\"Corneos_Makima\":\"https://civitai.com/api/download/models/6197\",\n",
         "\t\"Corneo_Power\":\"https://civitai.com/api/download/models/6027\" ,\n",
         "\t\"Yor_Forger\":\"https://civitai.com/api/download/models/6300\" ,\n",
-        "\t\"Corneos_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\", \n",
+        "\t\"Corneos_POV_Bound_Wrists_Missionary\":\"https://civitai.com/api/download/models/5405\",\n",
         "\t\"Corneos_Spitroast_Threesome\":\"https://civitai.com/api/download/models/6770\",\n",
         "\t\"Corneos_Anal_sex\":\"https://civitai.com/api/download/models/4597\" ,\n",
         "\t\"Corneos_Side-view_Deepthroat\":\"https://civitai.com/api/download/models/6242\" ,\n",
         "\t\"Corneos_Covering_Breasts-Two_Hands\":\"https://civitai.com/api/download/models/6033\" ,\n",
         "\t\"Corneos_X-shaped_Nipple_Pasties\":\"https://civitai.com/api/download/models/6318\" ,\n",
         "\t\"Corneos_POV_Oral\":\"https://civitai.com/api/download/models/5051\" ,\n",
-        "\t\"Corneos_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\", \n",
-        "\t\"Corneos_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\", \n",
+        "\t\"Corneos_POV_Paizuri\":\"https://civitai.com/api/download/models/5066\",\n",
+        "\t\"Corneos_Covering_Breasts-One_Arm\":\"https://civitai.com/api/download/models/6034\",\n",
         "\t\"Corneos_Arm_Grab_Doggystyle\":\"https://civitai.com/api/download/models/5160\" ,\n",
-        "\t\"Corneos_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\", \n",
+        "\t\"Corneos_Covering_Breasts-Arms_Crossed\":\"https://civitai.com/api/download/models/5746\",\n",
         "\t\"Licking_Oral\":\"https://civitai.com/api/download/models/5746\" ,\n",
         "}\n",
         "\n",
@@ -479,9 +480,9 @@
         "    if Lora_url:\n",
         "        base_name1 = os.path.basename(Lora_url)\n",
         "        if Lora_url.startswith(\"https://huggingface.co/\"):\n",
-        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name1} {Lora_url}  \n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name1} {Lora_url}\n",
         "        else:\n",
-        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora {Lora_url}  \n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora {Lora_url}\n",
         "    if Textual_url:\n",
         "        base_name2 = os.path.basename(Textual_url)\n",
         "        !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M {Textual_url} -d /content/stable-diffusion-webui/embeddings {Textual_url}\n",
@@ -489,9 +490,9 @@
         "        base_name3 = os.path.basename(Lycoris_url)\n",
         "\n",
         "        if Lycoris_url.startswith(\"https://huggingface.co/\"):\n",
-        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name3} {Lycoris_url}  \n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora -o {base_name3} {Lycoris_url}\n",
         "        else:\n",
-        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora {(Lycoris_url}  \n",
+        "            !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora {(Lycoris_url}\n",
         "\n",
         "install(Lora_url, Textual_url, Lycoris_url)\n"
       ],
@@ -539,7 +540,7 @@
         "import os\n",
         "\n",
         "upload_download = \"Upload_zip_drive and Download_zip\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
-        "folder_type = \"zip\" #@param [\"raw\",\"zip\"] \n",
+        "folder_type = \"zip\" #@param [\"raw\",\"zip\"]\n",
         "folder_name = \"generated_image\" # @param {'type': 'string'}\n",
         "\n",
         "if upload_download == \"Upload_drive\":\n",
@@ -592,7 +593,7 @@
         "[stable-diffusion-webui-colab-japanese](https://github.com/AI-Nios/stable-diffusion-webui-colab-japanese)<br>\n",
         "<br>\n",
         "▼以前のバージョン<br>\n",
-        "[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)<br><br> \n",
+        "[Nios_v2.ipynb](https://colab.research.google.com/github/AI-Nios/stable-diffusion-webui-colab-japanese/blob/main/Nios_v2_update.ipynb)<br><br>\n",
         "▼記事<br>\n",
         "[Google Colabで画像生成AIの色々なモデルを簡単に使おう](https://note.com/ai_nios/n/n0826a33edc8a)<br>\n",
         "<br>\n",
